# Send_Developing_Letters

./: .coverage  .gitignore  README.md  config.ini  pyproject.toml  requirements.txt
data/input/: companies.xlsx  skyfend.docx  ~$companies.xlsx
data/raw/: test_to_read_website.xlsx
src/: __init__.py  main.py  main1.py  main2.py  main3.py  main4.py  main_v2.py
src/api_clients/: __init__.py  deepseek_client.py
src/core/: __init__.py  developing_letter.py  my_own_company_business_data.py  target_company_data.py
src/data/: skyfend_business.py
src/data_access/: __init__.py  docx_reader.py  excel_reader.py  website_scraper.py
src/email_handler/: __init__.py  formatter.py  image_selector.py  sender.py
src/language_detector/: __init__.py  detector.py
src/letter_generator/: __init__.py  generator.py
src/models/: business_extraction.py  deepseek_api.py  extract_company_data.py  identify_cooperation_points.py
src/utils/: __init__.py  add_border.py  excel_writer_to_save_data.py  format_and_send_email.py  generate_developing_letters.py  helpers.py  save_email_to_drafts.py
tests/: test_add_border.py  test_business_extraction.py  test_deepseek_api.py  test_extract_company_data.py  test_extract_websites_from_excel.py  test_format_and_send_email.py  test_generate_developing_letter.py  test_generate_developing_letters.py  test_identify_cooperation_points.py  test_main.py  test_main1.py  test_main2.py  test_main3.py  test_main4.py  test_save_email_to_drafts.py  test_skyfend_business.py
tests/api_clients/: test_deepseek_client.py
tests/core/: test_developing_letter.py  test_my_own_company_business_data.py  test_target_company_data.py
tests/data_access/: test_docx_reader.py  test_excel_reader.py  test_website_scraper.py
tests/email_handler/: test_formatter.py  test_image_selector.py  test_sender.py
tests/letter_generator/: test_generator.py
tests/tmp_main/: test_to_read_website.xlsx
tests/utils/: test_excel_writer_to_save_data.py  test_helpers.py
