[project]
name = "send-developing-letters"
version = "0.1.0"
description = "A Python project for generating and sending development letters."
authors = [
    { name = "Jimmy", email = "15828061015@163.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9,<3.13"  # Updated to support Python 3.12
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "openai (>=1.66.3,<2.0.0)",
    "google-auth (>=2.38.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "google-api-python-client (>=2.164.0,<3.0.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "socksio (>=1.0.0,<2.0.0)"
]
packages = [{ include = "send_developing_letters", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
